# zol

./: ._.idea  ._venv  CITATION.cff  CITATION_NOTICE  CONTRIBUTING.md  Efaecalis_V583_epa_proteins.faa  LICENSE  PEP8_COMPLIANCE_GUIDE.md  README.md  TODO.txt  comprehensive_tests.sh  installation_error.txt  pyproject.toml  run_tests.sh  setup.py  zol_env.yml
bioconda_recipe/: README.txt  build.sh  meta.yaml
db/: README.txt
docker/: Dockerfile  README.txt  ZOL  run_ZOL.sh  test_docker.sh
docs/: conf.py  index.rst  overview.rst  requirements.txt
external_tools/: README.txt  Treemmer_v0.3.py
external_tools/STAG_1.0.0/: README.md
external_tools/STAG_1.0.0/ExampleData/: Fungi_SpeciesIDs.txt  Fungi_SpeciesMap.txt
scripts/: ._setup_annotation_dbs.py  annotateProtSeqs.py  cagecatProcess.py  convertMiniprotGffToGbkAndProt.py  expandDereplicatedAlignment.py  extractBiG-SCAPEclusters.py  extractProteinsFromGenBank.py  fastgenomicsNeighborhoodToGenBanks.py  genbankToFasta.py  generateSyntenicVisual.R  generateSyntenicVisual.py  listAllGenomesInDirectory.py  processNCBIGenBank.py  readifyAdditionalGenomes.py  runProdigalAndMakeProperGenbank.py  selectSpecificGeneClusters.py  setup_annotation_dbs.py  setup_bigscape.py
src/zol/: __init__.py  data_dictionary.py  fai.py  splitDiamondResultsForFai.cpp  util.py  zol.py  zol_suite.py
src/zol/orthologs/: findOrthologs.py  (+2 more)
test_case/Epa_MIBiG_GBK/: Epa_MIBiG_GenBank.gbk
test_case/Target_Genomes/: Efaecalis_B594.fasta  Efaecalis_OG1RF.fasta  Efaecalis_V583.fasta  Efaecium_EnGen0003.fasta  Efaecium_EnGen0013.fasta  Efaecium_EnGen0018.fasta
test_case/cgc_Results/: Command_Issued.txt  Plot_Input.txt  cgc_script.R
test_case/cgcg_Results/: Command_Issued.txt  gJCF_input.json  plot_legend.R
test_case/fai_Results_1/: DIAMOND_Results.pkl  Parameter_Inputs.txt  Query_Information.pkl  Target_Information.pkl
test_case/fai_Results_2/: DIAMOND_Results.pkl  Parameter_Inputs.txt  Query_Information.pkl  Target_Information.pkl
test_case/fai_Results_3/: DIAMOND_Results.pkl  Parameter_Inputs.txt  Query_Information.pkl  Target_Information.pkl
test_case/prepTG_Database/: All_Format_Inferences.txt  Parameter_Inputs.txt  Species_Tree.nwk  Target_Genome_Annotation_Files.txt  Target_Genomes.txt  Target_Genomes_DB.dmnd  Target_Genomes_DB_clustered.faa.clstr  Target_Genomes_DB_clustered.pkl  Target_Genomes_DB_clustered.tsv
test_case/zol_Results/: Annotations.pkl  Consensus_Path_Information.txt  Evolutionary_Statistics.pkl  Markovian_Order_Information.txt  OG_Consensus_Seqs.faa  OG_Statistics.pkl  Parameter_Inputs.txt
zol/: brewColors.R  clusterHeatmap.R  fai.py  njTree.R  phyloHeatmap.R  plotSegments.R  plotTinyAAI.R  salt_gc_vs_ribo_aai.R  splitDiamondResultsForFai  splitDiamondResultsForFai.cpp  util.py  zol.py
zol/classes/: BGC.py  GCF.py  Pan.py
zol/orthologs/: findOrthologs.py  runRBH  runRBH.cpp  splitDiamondResults  splitDiamondResults.cpp
(+11653 files in other folders)
